<resources>
    <string name="app_name">OLX</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="olx">Olx</string>
    <string name="india">India</string>
    <string name="india_s_leading_marketplace">India\'s Leading\nMarketplace</string>
    <string name="contnue_with_google">Contnue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="if_you_are_accepting_olx_terms_and_conditions_and_privacy_policy">If you are accepting\nOLX Terms and Conditions and Privacy Policy</string>
    <string name="test_screen_after_login">Test Screen after login</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="find_cars_mobiles_and_more">Find Cars, Mobiles, and More</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="sell" />
    <string name="what_are_you_offering">What are you Offering ?</string>
    <string name="brand">Brand</string>
    <string name="year">Year</string>
    <string name="km_driven">KM Driven</string>
    <string name="ad_title">Ad Title</string>
    <string name="mention_the_key_features_of_the_item">Mention the key features of the item</string>
    <string name="describe_what_you_are_selling">Describe what you are selling</string>
    <string name="include_conditions_and_reason_for_selling">Include Conditions and reason for selling</string>
    <string name="price">Price</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="required_fields">*Required Fields</string>
    <string name="next">Next</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="upload_upto_5_photos">Upload upto 5 Photos</string>
    <string name="preview">Preview</string>
    <string name="upload">Upload</string>
    <string name="select_source">Select Source</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="_100_00">$100.00</string>
    <string name="phase_1_mohali">Phase 1 Mohali</string>
    <string name="samsung">Samsung</string>
    <string name="_25_oct">25 Oct</string>
    <string name="ads">Ads</string>
    <string name="_100">100</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="call">Call</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>

</resources>