<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olx"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="84sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/india"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/india_s_leading_marketplace"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"/>

</LinearLayout>