<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:id="@+id/imageView"
                android:src="@drawable/building"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textStyle="bold"
                android:id="@+id/tvPrice"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:text="@string/_100_00"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:id="@+id/tvAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:text="@string/phase_1_mohali"
                android:layout_marginTop="4dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:id="@+id/tvBrand"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:text="@string/samsung"
                android:layout_marginTop="4dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:id="@+id/tvDate"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:text="@string/_25_oct"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>