<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olx"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="84sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/india"
            android:textColor="@color/blue"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/prgbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:layout_weight="0.35"
        android:background="@color/blue"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_google"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginTop="28dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/google"
                android:padding="4dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contnue_with_google"
                android:background="@color/white"
                android:layout_marginStart="20dp"
                android:textAlignment="center"/>

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/ll_facebook"-->
<!--            android:layout_width="280dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:background="@color/white"-->
<!--            android:layout_marginTop="28dp">-->

<!--            <ImageView-->
<!--                android:layout_width="48dp"-->
<!--                android:layout_height="48dp"-->
<!--                android:src= "@drawable/facebook"-->
<!--                android:padding="4dp"/>-->

<!--&lt;!&ndash;            <androidx.appcompat.widget.AppCompatButton&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="@string/continue_with_facebook"&ndash;&gt;-->
<!--&lt;!&ndash;                android:background="@color/white"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_marginStart="20dp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textAlignment="center"/>&ndash;&gt;-->


<!--            <com.facebook.login.widget.LoginButton-->
<!--                android:id="@+id/login_button"-->
<!--                android:visibility="gone"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:layout_marginBottom="30dp" />-->

<!--        </LinearLayout>-->

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_you_are_accepting_olx_terms_and_conditions_and_privacy_policy"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>