<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:background="@color/light_grey"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:background="@drawable/dash_box"
                        android:orientation="vertical"
                        android:gravity="center">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:id="@+id/imageViewChoosePhoto"
                            android:src="@drawable/camera"
                            android:tint="@color/design_default_color_primary_dark"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/choose_photo"
                            android:textColor="@color/design_default_color_primary_dark"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/recyclerView"
                            android:visibility="gone"/>

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="@drawable/box"
                        android:layout_marginTop="34dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/upload_upto_5_photos"
                            android:textAllCaps="true"
                            android:gravity="center"
                            android:background="@color/white"/>


                    </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="18dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonPreview"
                    android:text="@string/preview"
                    android:textAllCaps="false"
                    android:background="@drawable/box"
                    android:textColor="@color/design_default_color_primary"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonUpload"
                    android:text="@string/upload"
                    android:layout_alignParentEnd="true"
                    android:textAllCaps="false"
                    android:background="@color/blue"
                    android:textColor="@color/white"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>